# OpenSprinkler-Firmware

./: .gitignore  CMakeLists.txt  OpenSprinkler.cpp  build.sh  defines.h  main.cpp
